--- a/freebnb/freebnb/package.json
+++ b/freebnb/freebnb/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "js-cookie": "^2.2.1",
     "leaflet": "^1.6.0",
+    "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
