--- a/freebnb/freebnb/package.json
+++ b/freebnb/freebnb/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^16.13.1",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "build:css": "postcss src/styles/tailwind.css -o src/index.css",
@@ -44,6 +44,7 @@
     "autoprefixer": "^9.7.6",
     "concurrently": "^5.3.0",
     "postcss-cli": "^7.1.0",
+    "react-geocode": "^0.2.1",
     "tailwindcss": "^1.3.4"
   },
   "proxy": "http://localhost:8000"
