--- a/freebnb/freebnb/package.json
+++ b/freebnb/freebnb/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "autoprefixer": "^9.7.6",
     "concurrently": "^5.3.0",
+    "jest-localstorage-mock": "^2.4.3",
     "postcss-cli": "^7.1.0",
     "react-geocode": "^0.2.1",
     "tailwindcss": "^1.3.4"
